# OpenSMS

./: CHANGELOG.md  README.md  sms.code-workspace
.github/workflows/: docker-publish.yml  release.yml  website-ci.yml
backend/: .env.example  .gitattributes  .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend-directus/: .env-example  docker-compose.yaml
backend/iac/ansible/: hosts.yml.example  playbook.yml
backend/iac/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
backend/src/: payload.config.ts  razorpay.ts  server.ts
backend/src/access/: isAdmin.ts
backend/src/collections/: Announcements.ts  Attendance.ts  Attendances.ts  Branches.ts  Courses.ts  Faculties.ts  Fees.ts  Grades.ts  Marks.ts  Media.ts  Progresses.ts  Students.ts  Subjects.ts  Users.ts
backend/src/globals/: LoginLogo.ts  Logo.ts  Metadata.ts
backend/src/migrations/: 20240517_064007.json  20240517_064007.ts  20240608_161644.json  20240608_161644.ts  20240621_062251.json  20240621_062251.ts  20240703_161904.json  20240703_161904.ts
frontend/: .env  .env.local-example  .gitignore  capacitor.config.ts  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend-ps/: packages.dhall
frontend/android/app/: build.gradle
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: desktop.json  mobile.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: _not-found.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
(+90 files in other folders)
