[package]
name = "sms-frontend"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sms_frontend_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.0.0-beta.7"
